api-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /router
  labels:
    app: api-gateway
spec:
  type: NodePort
  ports:
  - nodePort: 31798
    port: 9000
    targetPort: 80
    protocol: TCP
  selector:
    app: api-gateway

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: default
spec:

  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-test
  template:
    metadata:
      labels:
        app:  api-gateway-test
    spec:
      containers:
      - name: api-gateway-test
        image: 712693083859.dkr.ecr.ap-south-1.amazonaws.com/tpg-admin-server:jenkins-build-1.0.58
        ports:
        - containerPort: 9000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
        volumeMounts:
        - mountPath: /app/
          name: api-gateway-volume    
      restartPolicy: Always
      imagePullSecrets:
      - name: aws-ecr-5
        
      
      volumes:
      - configMap:
          name: api-gateway-v2
        name: api-gateway-volume
