router.yml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /router
  labels:
    app: router
spec:
  type: NodePort
  ports:
  - nodePort: 31785
    port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: router

---

apiVersion: v1
kind: Endpoints
metadata:
 name: router
subsets:
 - addresses:
     - ip: 172.31.1.236
     - ip: 172.31.1.252
   ports:
     - port: 31785
     - name: "router-ep"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: router
  name: router
  namespace: default
spec:

  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app:  router
    spec:
      containers:
      - name: router
        image: 712693083859.dkr.ecr.ap-south-1.amazonaws.com/project_value
        ports:
        - containerPort: 8001
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
        volumeMounts:
        - mountPath: /app/
          name: config-volume    
      restartPolicy: Always
      imagePullSecrets:
      - name: awslogin
        
      
      volumes:
      - configMap:
          name: router
        name: config-volume
