deployment.yml
#apiVersion: v1
#kind: Service
#metadata:
# name: api

#spec:
#  ports:
#  -  port: 8002
#     targetPort: 8002
#  selector:
 #    app: api

#spec:
#  type: NodePort
#  ports:
#    - nodePort: 31785
#      port: 8002
#      targetPort: 8002
#      protocol: TCP
#  selector:
#    app: igw

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /router
  labels:
    app: api
spec:
#  type: NodePort
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP


---

apiVersion: v1
kind: Endpoints
metadata:
  name: api
subsets:
  - addresses:
      - ip: 172.31.35.216
      - ip: 172.31.37.54
    ports:
      - port: 8002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: default
spec:
  
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
#      hostNetwork: true
      containers:
        - name: api
          image: 712693083859.dkr.ecr.ap-south-1.amazonaws.com/project_value
          ports:
            - containerPort: 8002
          imagePullPolicy: Always
#          args: ["--port", "8002"]
          resources:
            requests:
              cpu: 200m
          volumeMounts:
            - mountPath: /app/
              name: api-volume
      restartPolicy: Always
      imagePullSecrets:
        - name: awslogin


      volumes:
        - configMap:
            name: api
          name: api-volume



---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /router
        backend:
          serviceName: api
          servicePort: 8002

#---


#apiVersion: autoscaling/v2beta1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: api
#  namespace: default
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
##    kind: Deployment
#    name: api
#  minReplicas: 1
#  maxReplicas: 3

#  metrics:
#    - type: Resource
#      resource:
#        name: cpu
#        targetAverageUtilization: 50
