onprem-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: router
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /router
  labels:
    app: router
spec:
  ports:
    -  port: 9000
       targetPort: 9000
       protocol: TCP
  selector:
    app: router

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: router
  name: router
spec:

  replicas: 2
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: 712693083859.dkr.ecr.ap-south-1.amazonaws.com/project_value
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
          #resources:
            #requests:
              #cpu: 200m
          volumeMounts:
            - mountPath: /usr/deployment/
              name: router-volume
      restartPolicy: Always
      imagePullSecrets:
        - name: awslogin


      volumes:
        - configMap:
            name: router
          name: router-volume


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: router
spec:
  rules:
    - http:
        paths:
          - path: /router
            backend:
              serviceName: router
              servicePort: 9000
